syntax = "proto3";

option csharp_namespace = "Tinkwell.Services";

package Tinkwell;

service HealthCheck {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    DEGRADED = 3;
  }
  ServingStatus status = 1;
  optional string message = 2;
}